--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode7.3
 language: cpp
 env:
   global:
-   - OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl/1.0.2h_1
+   - OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl/1.0.2j
    - BOOST_ROOT=/usr/local/Cellar/boost160/1.60.0
    - GOLOS_VERSION=v0.14.2
 
